Added model, view model and services for components

--- a/car-stereo-world/appsettings.json
+++ b/car-stereo-world/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=LAPTOP-5G0RNQGC;Initial Catalog=car-stereo-world-db;Integrated Security=True;Pooling=False"
+  }
 }
