--- a/car-stereo-world/car-stereo-world.csproj
+++ b/car-stereo-world/car-stereo-world.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="microsoft.entityframeworkcore" Version="5.0.7" />
+    <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="5.0.7" />
+    <PackageReference Include="microsoft.entityframeworkcore.tools" Version="5.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
